--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="flex-grow-1">
                 <h4>Video Controller</h4>
                 <p class="pb-0 mb-0 text-start">Purpose: Basic Video control functionalities</p>
-                <p class="pb-0 mt-3 text-start"><a href="https://github.com/brs-studio/js-basics/tree/main/video-controller" target="_blank" >Git Repository</a></p>
+                <p class="pb-0 mt-3 text-start"><a href="https://github.com/chakradhar-brs/Vedio-Controller/blob/main/Readme.md" target="_blank" >Git Repository</a></p>
               </div>
             </div>
           </div>
